feat: finished admin routes
